<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:gravity="center"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radiogroup_sort_select"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_select_contact"
            android:text="@string/radiobutton_contact"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rb_select_date"
            android:text="@string/radiobutton_date"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rb_select_duration"
            android:text="@string/radiobutton_duration"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radiogroup_sort_arrange"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_arrange_asc"
            android:text="@string/radiobtton_asc"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rb_arrange_desc"
            android:text="@string/radiobtton_desc"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

</LinearLayout>
