<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/list_item_background_activated">

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        />

        <anthonynahas.com.autocallrecorder.customs.RoundedImageView
            android:id="@+id/img_profile"
            android:src="@drawable/custmtranspprofpic200px"
            android:scaleType="fitXY"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/imageview_profile"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_list_cell_heigh"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/img_profile"
            android:layout_toEndOf="@+id/img_profile"
            android:gravity="center_vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/call_contact_name_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/call_number_std"
                    android:maxLines="1"
                    android:textColor="@android:color/black"/>

                <ImageView
                    android:id="@+id/call_icon_isIncoming"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:background="@android:color/background_light"
                    android:layout_toEndOf="@+id/call_contact_name_number"
                    android:contentDescription="for incoming or outgoing call"/>
            </RelativeLayout>


            <TextView
                android:id="@+id/call_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:maxLines="1"
                android:text="@string/call_date_std"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    <RelativeLayout
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_list_cell_heigh"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">


        <TextView
            android:id="@+id/call_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:maxLines="1"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/call_duration_std"
            android:textColor="@android:color/black"/>

    </RelativeLayout>
</RelativeLayout>
